# MyFTP

./: .gitignore  README.md
source/: CMakeLists.txt
source/client/: connection.cpp  connection.h  myftpclient.cpp  myftpclient.h
source/common/: common.cpp  common.h
source/server/: Connection.cpp  Connection.h  connection.cpp  connection.h  connections.cpp  connections.h  fileoperation.cpp  fileoperation.h  myftpserver.cpp  myftpserver.h  worker.cpp  worker.h
